# MobileyeBootcamp

./: .DockerFile  .dockerignore  .gitignore  Bootcamp Roadmap.h  CMakeLists.txt  CMakeLists2.txt  ClientMain.cpp  ClientMain.h  Header.h  README.md  ServerMain.cpp  builder-rpi.Dockerfile  clientMain.cpp  d.Dockerfile  log.txt  main.cpp  rp.Dockerfile  rp.cmake  ‏‏CMakeLists1 - עותק.txt
ClientMain/: CMakeLists.txt
ServerMain/: CMakeLists.txt
docker/: build.Dockerfile  grpc.Dockerfile  ubunto-for-build.Dockerfile
dockers files/: build.Dockerfile  grpc.Dockerfile
lib/: CMakeLists.txt  Camera.cpp  Camera.h  CameraConnectionManager.cpp  CameraConnectionManager.h  CameraConnector.h  CameraManager.cpp  CameraManager.h  CameraProcessor.cpp  CameraProcessor.h  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationManeger.cpp  ConfigurationManeger.h  ConnectionManager.cpp  ConnectionManager.h  Detection.h  FrameWarp.h  Header.h  IPAddressFinder.cpp  IPAddressFinder.h  ListeningManager.cpp  ListeningManager.h  Queue.cpp  Queue.h  QueueSafe.cpp  QueueSafe.h  Rect.cpp  Rect.h  RectHandler.cpp  RectHandler.h  SQLHandler.cpp  SQLHandler.h  Server.cpp  Server.h  ServerListeningManager.cpp  ServerListeningManager.h  SocketInitializer.cpp  SocketInitializer.h  Source.cpp  (+9 more)
lib/proto_gen/: camera_service.grpc.pb.cc  camera_service.pb.cc  camera_service.pb.h
lib_Test/: CMakeLists.txt  NewFile.cpp  Tests.cpp  functionForTests.h  mockRect.cpp
lib_Test/tests/: CMakeLists.txt  CalcAbsDiffTest.cpp  CameraProcessorTest.cpp  ConfigurationManagerTest.cpp  CurrentTimeTest.cpp  QueueSafeTest.cpp  QueueTest.cpp  RectHandlerTest.cpp  SqlHandlerTest.cpp  Test.cpp  YoloRectTest.cpp  YoloTest.cpp  configurationJsonTest.cpp  functionForTests.cpp  functionForTests.h  mockRect.cpp  mockRectTest.cpp
lib_logger/: Logger.h
nlohmann_json/: CMakeLists.txt  json.hpp
protos/: CMakeLists.txt  service.proto
